style: refine css, responsive headlines

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="framework/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="framework/css/main.css">
+    <!-- MEDIA QUERY CSS -->
+    <link rel="stylesheet" href="framework/css/main-small.css">
     <link rel="stylesheet" href="framework/css/normalize.css">
     <link rel="stylesheet" href="framework/js/jquery-1.11.3.min.js">
     <link rel="stylesheet" href="framework/bootstrap/dist/js/bootstrap.min.js">
