feat cover resp image in markup

--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
 <body>
     <div class="container-fluid">
         <div class="cover">
+            <picture>
+                <img 
+                    src="framework/css/img_src/cover.png" 
+                    height="640" 
+                    width="1024" 
+                    alt="mountain cover image">
+                <source 
+                    media="screen and (orientation:portrait)"
+                    srcset=""
+                    sizes="100vh"
+                        />
+                <source 
+                    media="screen and (orientation:landscape)"
+                    srcset=""
+                    sizes="100vw"
+                />
+
+            </picture>            
             <div class="row headline">
                 <h1>The hard thing about the hard thing</h1>
                 <h2>My view on Ben Horowitz’s latest book</h2>
