--- a/index.html
+++ b/index.html
@@ -19,23 +19,30 @@
 <body>
     <div class="container-fluid">
         <div class="cover">
-            <picture>
-                <img 
-                    src="framework/css/img_src/cover.png" 
-                    height="640" 
-                    width="1024" 
-                    alt="mountain cover image">
+            <picture class="cover_img">
                 <source 
-                    media="screen and (orientation:portrait)"
-                    srcset=""
+                    media="screen and (max-pixel-ratio:1)"
+                    srcset="
+                        framework/css/img_cover/cover-portrait-extra-small.png 480h,
+                        framework/css/img_cover/cover-portrait-small.png 640h,
+                        framework/css/img_cover/cover-portrait-medium.png 1024h,
+                        framework/css/img_cover/cover-portrait-large.png 1280h,
+                        "
                     sizes="100vh"
-                        />
+                />
                 <source 
-                    media="screen and (orientation:landscape)"
-                    srcset=""
+                    media="screen and (min-pixel-ratio:1.1)"
+                    srcset="
+                        framework/css/img_cover/cover-landscape-small.png 360w,
+                        framework/css/img_cover/cover-landscape-medium.png 640w,
+                        framework/css/img_cover/cover-landscape-large.png 1024w,
+                        framework/css/img_cover/cover-landscape-extra-large.png 1920w,
+                        "
                     sizes="100vw"
                 />
-
+                <img 
+                    src="framework/css/img_src/ben.png" height="350" width="700" 
+                    alt="mountain cover image"/>
             </picture>            
             <div class="row headline">
                 <h1>The hard thing about the hard thing</h1>
