--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
             </picture>  -->   
             <img class="cover-img"
                 src="framework/css/img_cover/cover-landscape-small.png"
-                srcset="framework/css/img_cover/cover-landscape-small.png 360w,
-                        framework/css/img_cover/cover-landscape-medium.png 640w,
-                        framework/css/img_cover/cover-landscape-large.png 1024w,"
+                srcset="
+                    framework/css/img_cover/cover-portrait-extra-small.png 320w,
+                    framework/css/img_cover/cover-portrait-small.png 360w,
+                    framework/css/img_cover/cover-landscape-medium.png 640w,
+                    framework/css/img_cover/cover-landscape-large.png 1024w,"
                 sizes="100vw"
                 alt="mountain cover image"
             />        
