feat related post, responsive image for thumbnail, image resize and image optimize

--- a/index.html
+++ b/index.html
@@ -91,9 +91,56 @@ First of all, 100% of the earnings of the book will be donated to charity, and t
         </div>
         <div class="row comment">
         </div>
-        <div class="row related-post">            
+        <div class="row related-post"> 
+            <div class="title-component">
+                Related post
+            </div> 
+            <div class="related-post-block col-xs-12 col-sm-6">
+                <img class="related-img"
+                srcset="
+                    framework/css/img_thumb/forest-small.png 360w,
+                    framework/css/img_thumb/forest-medium.png 640w,
+                "
+                alt="forest"
+                /> 
+                 
+                <div class="related-text">
+                    <div class="related-title">
+                        Running a Google Design Sprint from start to end
+                    </div>
+                    <div class="related-author">
+                        <span class="ava"><img src="" alt=""></span>
+                        <span class="related-author-name">Nelson Maddeline</span>
+                        <span class="related-timestamp">20 weeks ago</span>
+                    </div>
+                </div>        
+            </div>
+            <div class="related-post-block col-xs-12 col-sm-6">
+                <img class="related-img"
+                src="framework/css/img_thumb/forest-small.png" 
+                srcset="
+                    framework/css/img_thumb/hill-small.png 360w,
+                    framework/css/img_thumb/hill-medium.png 640w,"
+                alt="hill"
+                /> 
+                <div class="related-text">
+                    <div class="related-title">
+                        How I became a morning person (and why I decided to make the change)
+                    </div> 
+                    <div class="related-author">
+                        <span class="ava"><img src="" alt=""></span>
+                        <span class="related-author-name">John Zeratsky</span>
+                        <span class="related-timestamp">10 weeks ago</span>
+                    </div>
+                </div>
+            </div>              
         </div>
-        <div class="row recommended-post"></div>
+        <div class="row recommended-post">
+            <div class="title-component">
+                Recommended post
+            </div> 
+        </div>
+        <footer></footer>
     </div>    
 </body>
 </html>
