feat comment bar

--- a/index.html
+++ b/index.html
@@ -90,7 +90,12 @@ First of all, 100% of the earnings of the book will be donated to charity, and t
                 <p>I’ve started realizing this same thing only recently, and I like to think that realizing it has saved my life. Thanks, Ben, for reminding me of this. It is too important not to think about it every day. And that’s all, folks.</p>
             </div>
         </div>
-        <div class="row comment">
+        <div class="comment">
+            <div class="row comment-meta">
+                <span class="meta-like pull-left"><i class="fa fa-heart"></i> 20 likes</span>
+                <span class="meta-comment pull-left"><i class="fa fa-comment-o"></i> 50 comments</span>
+                <span class="meta-share pull-right"><i class="fa fa-share-alt"></i> 3 shares</span>
+            </div>
         </div>
         <div class="row related-post"> 
             <div class="title-component">
