feat icon nav bar

--- a/index.html
+++ b/index.html
@@ -21,20 +21,18 @@
 <body>
     <nav class="navbar navbar-inverse" role = "navigation">
         <div class="row">
-            <div class="navbar-header navbar-brand">
+            <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>                      
+                  <i class="fa fa-bars"></i>                   
                 </button>
           </div>
-              <div class="navbar-brand collapse navbar-collapse" id="myNavbar">
+              <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li><a href="#">Hot</a></li>
-                    <li><a href="#">New</a></li>
-                    <li><a href="#">Explore</a></li>
-                    <li><a href="#">User</a></li>
-                    <li><a href="#">Setting</a></li>
+                    <li><a href="#"><i class="fa fa-fire"></i>Hot</a></li>
+                    <li><a href="#"><i class="fa fa-newspaper-o"></i>New</a></li>
+                    <li><a href="#"><i class="fa fa-search"></i>Explore</a></li>
+                    <li><a href="#"><i class="fa fa-user"></i>User</a></li>
+                    <li><a href="#"><i class="fa fa-wrench"></i>Setting</a></li>
                 </ul>
             </div>
         </div>
